<resources>
    <string name="app_name">Players Quiz</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="record">Record: %s</string>
    <string name="player_count">%d of %d players</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>
    <string name="guess_transfers">Guess the player from transfers</string>
    <string name="scramble_word">Scramble word</string>
    <string name="three_of_ten">3 of 10 words</string>
    <string name="score_twenty">Score: 20</string>
    <string name="record_zero">Record: 0</string>
    <string name="loading">Loading...</string>
    <string name="football">Football Game</string>
    <string name="nba">NBA Game</string>
    <string name="guess">GUESS PLAYER</string>
    <string name="posizinoe">posizione</string>
    <string name="altezza">altezza</string>
    <string name="squadra">squadra</string>
    <string name="squad">squad</string>
    <string name="position">position</string>
    <string name="guess_information">guess player from information</string>
    <string name="year">year</string>
    <string name="offline_message">Nessuna connesione Internet</string>
    <string name="OfflineImage">Offline Image</string>
    <string name="tryAgain">Try Again</string>
</resources>